--- a/project.html
+++ b/project.html
@@ -22,6 +22,11 @@
             <td>Mehemti</td>
             <td>15</td>
         </tr>
+        <tr>
+            <td>Albert</td>
+            <td>Haliti</td>
+            <td>17</td>
+        </tr>
 
 
 
