--- a/project.html
+++ b/project.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        h1 {
+            color: blue;
+            background-color: gray;
+            text-align: center;
+        }
+    </style>
     <title>Document</title>
 </head>
 <body>
