--- a/project.html
+++ b/project.html
@@ -37,5 +37,6 @@
     </table>
     <p>Hiiiiiiii</p>
     <h1>this is heading number 1</h1>
+    <h2>this is heading number 2</h2>
 </body>
-</html>
+</html>   
